# rust-nethuns

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  run.sh  run_example.sh  rustfmt.toml  setup.sh  wrapper.h
.github/: dependabot.yml
cpp/: .gitignore  CMakeLists.txt
cpp/src/: perf_recv.cpp  perf_send.cpp
docs/: SPSC queue.md
examples/: bench_recv.rs  file-pcap-mt.rs  file-pcap.rs  filter.rs  forward-mt.rs  forward.rs  meter-mt.rs  meter.rs  perf_recv.rs  perf_send.rs  recv_test.rs  send.rs  send_test.rs  test.rs
lib/nethuns-hybrid-rc/: Cargo.toml
lib/nethuns-hybrid-rc/benches/: benchmark.rs
lib/nethuns-hybrid-rc/src/: atomic_thread_id.rs  lib.rs  slice_builder.rs  tests.rs  thread_id.rs
lib/netmap/: Cargo.toml  README.md  build.rs  netmap.h
lib/netmap/src/: bindings.rs  constants.rs  lib.rs  macros.rs  nmport.rs  ring.rs  slot.rs
scripts/: run_example.sh  run_example_release.sh  setup_env.sh  valgrind.sh
src/: api.rs  base.rs  define.rs  global.rs  lib.rs  main.rs  misc.rs  nethuns.rs  queue.rs  sockets.rs  types.rs  vlan.rs
src/api/: netmap.rs
src/api/netmap/: pkthdr.rs  socket.rs
src/misc/: circular_buffer.rs  circular_queue.rs  macros.rs  send_rc.rs
src/misc/hybrid_rc/: README.md  atomic_thread_id.rs  mod.rs  slice_builder.rs  tests.rs  thread_id.rs
src/sockets/: api.rs  base.rs  bindings.rs  errors.rs  mod.rs  netmap.rs  pcap.rs  ring.rs  ring_slot.rs  state.rs  types.rs
src/sockets/api/: netmap.rs
src/sockets/api/netmap/: bindable_socket.rs  nethuns_socket.rs  pkthdr.rs  utility.rs
src/sockets/base/: pcap.rs
src/sockets/base/pcap/: constants.rs  helper.rs  reader_builtin.rs  reader_pcap.rs  socket.rs
src/sockets/base/pcap/socket/: builtin_reader.rs  pcap_reader.rs
src/sockets/netmap/: bindable_socket.rs  nethuns_socket.rs  pkthdr.rs  ring.rs  socket.rs  utility.rs
src/sockets/pcap/: constants.rs  reader_builtin.rs  reader_pcap.rs
src/sockets/ring/: ring_slot.rs
tests/compile-fail/: packet_dropped_before_buffer.rs  packet_dropped_before_buffer.stderr  pcap_socket_dropped_before_packet.rs  pcap_socket_dropped_before_packet.stderr  socket_dropped_before_buffer.rs  socket_dropped_before_buffer.stderr  socket_dropped_before_packet.rs  socket_dropped_before_packet.stderr
tests/compile-fail copy/: socket_dropped_before_packet.stderr
