[package]
name = "nethuns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.callgrind] # Produce binaries for Valgrind+Callgrind profiling
inherits = "release"
debug = true


[dependencies]
byteorder = "1.5.0"
c_netmap_wrapper = { version = "0.1.0", path = "./lib/netmap", optional = true }
cfg-if = "1.0.0"
delegate = "0.10.0"
derivative = "2.2.0"
derive_builder = "0.12.0"
errno = "0.3.5"
etherparse = "0.13.0"
getset = "0.1.2"
is_trait = "0.1.4"
libc = "0.2.149"
once_cell = "1.18.0"
pcap-parser = "0.14.1"
rustix = "0.38.19"
small_ctor = "0.1.1"
thiserror = "1.0.49"


[build-dependencies]
cfg-if = "1.0.0"


[dev-dependencies]
anyhow = "1.0.75"
bus = "2.4.1"
ctrlc = "3.4.1"
pico-args = "0.5.0"
rand = "0.8.5"
rtrb = "0.2.3"
string-builder = "0.2.0"
trybuild = "1.0.85"


[features]
default = [
    "netmap",            # FIXME remove from default features
    "libc/extra_traits",
    "rustix/net",
]
netmap = ["dep:c_netmap_wrapper"]
libpcap = []
xdp = []
tpacket_v3 = []
NETHUNS_USE_BUILTIN_PCAP_READER = []


[[example]]
name = "file-pcap"
required-features = ["NETHUNS_USE_BUILTIN_PCAP_READER"]

[[example]]
name = "file-pcap-mt"
required-features = ["NETHUNS_USE_BUILTIN_PCAP_READER"]
