[package]
name = "nethuns"
authors = ["Riccardo Sagramoni"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.perf] # Produce binaries for performance tests and profiling
inherits = "release"
codegen-units = 1
debug = true
lto = "thin"


[dependencies]
byteorder = "1.5.0"
c_netmap_wrapper = { version = "*", path = "./lib/netmap", optional = true }
cfg-if = "1.0.0"
delegate = "0.11.0"
derivative = "2.2.0"
errno = "0.3.8"
etherparse = "0.13.0"
getset = "0.1.2"
libc = "0.2.151"
once_cell = "1.19.0"
pcap-parser = "0.14.1"
rustix = "0.38.28"
small_ctor = "0.1.1"
static_assertions = "1.1.0"
thiserror = "1.0.51"


[build-dependencies]
cfg-if = "1.0.0"


[dev-dependencies]
anyhow = "1.0.75"
ctrlc = "3.4.1"
num-format = "0.4.4"
pico-args = "0.5.0"
rand = "0.8.5"
rtrb = "0.3.0"
string-builder = "0.2.0"
trybuild = "1.0.85"


[features]
default = ["libc/extra_traits", "rustix/net"]
netmap = ["dep:c_netmap_wrapper"]
libpcap = []
xdp = []
tpacket_v3 = []
NETHUNS_USE_BUILTIN_PCAP_READER = []


[[example]]
name = "file-pcap"
required-features = ["NETHUNS_USE_BUILTIN_PCAP_READER"]

[[example]]
name = "file-pcap-mt"
required-features = ["NETHUNS_USE_BUILTIN_PCAP_READER"]
