[package]
name = "c_netmap_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.3.2"
libc = "0.2.147"
thiserror = "1.0.44"
uapi = "0.2.10"

[build-dependencies]
bindgen = { version = "0.66.1", features = ["experimental"] }
cfg-if = "1.0.0"
regex = "1.9.3"

[dev-dependencies]
